--- a/zzzdemo_web/pom.xml
+++ b/zzzdemo_web/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.incloud.hcp</groupId>
-	<artifactId>cogaiproviderbackend</artifactId>
+	<artifactId>zzzdemobackend</artifactId>
 	<packaging>${packaging.type}</packaging>
 
 	<name>zzzdemo_web</name>
@@ -51,6 +51,27 @@
 					<artifactId>slf4j-api</artifactId>
 					<scope>provided</scope>
 				</dependency>
+				<!--<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+					<scope>container</scope>
+				</dependency>-->
+
+				<!-- Logging with SLF4J & LogBack -->
+				<!--<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+					<version>${slf4j.version}</version>
+					<scope>compile</scope>
+				</dependency>-->
+				<!--<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+					<version>${slf4j.version}</version>
+				</dependency>-->
+
+
+
 				<dependency>
 					<groupId>javax.servlet</groupId>
 					<artifactId>servlet-api</artifactId>
@@ -162,7 +183,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>cogaiproviderbackend</finalName>
+		<finalName>zzzdemobackend</finalName>
 		<plugins>
 
 			<plugin>
