--- a/zzzdemo_web/src/main/resources/application-dev.properties
+++ b/zzzdemo_web/src/main/resources/application-dev.properties
@@ -20,10 +20,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.jpa.properties.hibernate.generate_statistics = false
 spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HANARowStoreDialect
-spring.datasource.url = jdbc:sap://zeus.hana.prod.us-east-1.whitney.dbaas.ondemand.com:22782/?user=IPROVIDER_DEV&currentSchema=IPROVIDER_DEV&password=Pa$$w0rd&encrypt=true&ValidateCertificate=true
+#spring.datasource.url = jdbc:sap://zeus.hana.prod.us-east-1.whitney.dbaas.ondemand.com:22782/?user=IPROVIDER_DEV&currentSchema=IPROVIDER_DEV&password=Pa$$w0rd&encrypt=true&ValidateCertificate=true
+#spring.datasource.username = IPROVIDER_DEV
+#spring.datasource.password = Pa$$w0rd
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?user=postgres&currentSchema=PRUEBA_DEV&password=Inicio01$$
 spring.datasource.username = IPROVIDER_DEV
 spring.datasource.password = Pa$$w0rd
-
 
 # PRIMARY DATA SOURCE
 # HANA (CLOUD) DB
